--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
   <header>
@@ -13,6 +15,7 @@
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#education">Education</a></li>
@@ -31,7 +34,8 @@
         <h2>AI CSE Graduate | Frontend Developer</h2>
         <p>
           I’ve completed my B.Tech in Computer Science Engineering (AI) at KL University.<br>
-          I’m a passionate, hardworking individual with a strong willingness to learn, adapt, and grow in a tech-driven environment.<br>
+          I’m a passionate, hardworking individual with a strong willingness to learn, adapt, and grow in a tech-driven
+          environment.<br>
           I’m looking forward to contributing to impactful projects and continuously enhancing my skillset.
         </p>
       </div>
@@ -46,8 +50,10 @@
         </div>
         <div class="about-text">
           <p>
-            I am a hardworking and curious individual who has just completed my undergraduate degree in Computer Science Engineering at KL University with a GPA of 8.65.<br>
-            I’m eager to grow in a tech-driven environment, with strong interests in machine learning, data analytics, and software development.
+            I am a hardworking and curious individual who has just completed my undergraduate degree in Computer Science
+            Engineering at KL University with a GPA of 8.65.<br>
+            I’m eager to grow in a tech-driven environment, with strong interests in machine learning, data analytics,
+            and software development.
           </p>
         </div>
       </div>
@@ -89,39 +95,223 @@
       </div>
     </section>
 
+    <!-- Professional Experience Section -->
+    <section id="experience" class="section experience-wrapper">
+      <h2>Professional Experience</h2>
+      <div class="experience-container">
+
+        <div class="experience-card">
+          <div class="card-header">
+            <h3>Intern - Data Science & Analytics</h3>
+            <span class="company">The Institute of Electronic Telecommunication Engineers</span>
+            <span class="date">Jun 2022</span>
+          </div>
+          <ul class="experience-list">
+            <li>Worked on data preprocessing, analysis, and visualization tasks.</li>
+            <li>Assisted in creating models and interpreting outputs for real-world datasets.</li>
+          </ul>
+        </div>
+
+        <div class="experience-card">
+          <div class="card-header">
+            <h3>Intern – React JS Frontend & C# .NET Backend</h3>
+            <span class="company">Fidrox Technologies Pvt. Ltd., Bangalore</span>
+            <span class="date">Jan 2025 – Jun 2025</span>
+          </div>
+          <ul class="experience-list">
+            <li>Worked on developing and integrating frontend modules using React JS and backend services with C# and
+              .NET.</li>
+            <li>Contributed to full-stack project workflows, including API development, database connectivity, and UI
+              implementation.</li>
+            <li>Successfully completed a 6-month project internship with satisfactory performance in assigned
+              responsibilities.</li>
+          </ul>
+        </div>
+
+      </div>
+    </section>
+
     <!-- Projects Section -->
     <section id="projects" class="projects-section">
       <h2>Projects</h2>
       <p>What I’ve built and contributed to</p>
 
       <div class="projects-container">
+
         <div class="project-card">
-          <h3>Product Management System</h3>
-          <p>A tool to manage product ideas and development efficiently.</p>
+          <h3>Ghar Sansar</h3>
+          <p><strong>Organization: Client Project</strong></p>
+          <p>A premium interior design website showcasing services, custom furniture, and home decor solutions.</p>
+          <ul>
+            <li>Designed a visually appealing and responsive UI for showcasing interior designs.</li>
+            <li>Implemented smooth navigation and portfolio galleries.</li>
+            <li>Optimized for performance and SEO visibility.</li>
+          </ul>
+          <a href="https://www.gharsansar.store/" target="_blank" class="project-link">Visit Site ↗</a>
           <div class="tags">
             <span>React</span>
-            <span>SQL</span>
+            <span>Web Design</span>
             <span>UI/UX</span>
           </div>
         </div>
 
         <div class="project-card">
+          <h3>Maa Jewellers</h3>
+          <p><strong>Organization: Client Project</strong></p>
+          <p>An elegant e-commerce platform for a premium jewellery brand, featuring gold and diamond collections.</p>
+          <ul>
+            <li>Built with React (Vite) for a fast and modern shopping experience.</li>
+            <li>Showcased extensive product catalogs with high-quality imagery.</li>
+            <li>Integrated contact and location features for physical stores.</li>
+          </ul>
+          <a href="https://maajewellery.co.in/" target="_blank" class="project-link">Visit Site ↗</a>
+          <div class="tags">
+            <span>React</span>
+            <span>Vite</span>
+            <span>CSS3</span>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <h3>Alankar Furniture</h3>
+          <p><strong>Organization: Client Project</strong></p>
+          <p>A corporate website for a leading furniture manufacturer specializing in office and institutional
+            furniture.</p>
+          <ul>
+            <li>Developed a structured catalog for diverse furniture categories.</li>
+            <li>Ensured mobile responsiveness and cross-browser compatibility.</li>
+            <li>Highlighted manufacturing capabilities and client portfolio.</li>
+          </ul>
+          <a href="https://www.alankarfurniture.co.in/" target="_blank" class="project-link">Visit Site ↗</a>
+          <div class="tags">
+            <span>HTML5</span>
+            <span>JavaScript</span>
+            <span>Bootstrap</span>
+          </div>
+        </div>
+
+
+        <div class="project-card">
+          <h3>Pedal Zone</h3>
+          <p><strong>Organization: Client Project</strong></p>
+          <p>A modern e-commerce platform for premium classic bicycles, offering a seamless browsing and purchasing
+            experience.</p>
+          <ul>
+            <li>Built with React and Vite for high performance and speed.</li>
+            <li>Designed a minimalist and elegant UI to highlight product aesthetics.</li>
+            <li>Implemented responsive layout for optimal viewing on all devices.</li>
+          </ul>
+          <a href="https://pedal-zone.vercel.app/" target="_blank" class="project-link">Visit Site ↗</a>
+          <div class="tags">
+            <span>React</span>
+            <span>Vite</span>
+            <span>Tailwind CSS</span>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <h3>Sahni Auto</h3>
+          <p><strong>Organization: Client Project</strong></p>
+          <p>Official website for a leading authorized dealer of Tata Motors and Massey Ferguson vehicles.</p>
+          <ul>
+            <li>Showcased a wide range of commercial vehicles and tractors.</li>
+            <li>Integrated dealership information, services, and contact forms.</li>
+            <li>Optimized for local SEO to attract regional customers.</li>
+          </ul>
+          <a href="https://www.sahniauto.com/home" target="_blank" class="project-link">Visit Site ↗</a>
+          <div class="tags">
+            <span>HTML5</span>
+            <span>JavaScript</span>
+            <span>SEO</span>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <h3>Task Manager Web App</h3>
+          <p><strong>Organization: Self-Project</strong></p>
+          <p>A task tracking tool built using Flask and PostgreSQL. Allows users to register, log in, add, edit, and
+            delete tasks.</p>
+          <ul>
+            <li>Built user authentication system using Flask-Login.</li>
+            <li>Implemented CRUD operations and PostgreSQL database integration.</li>
+            <li>Deployed live using Gunicorn and Heroku.</li>
+          </ul>
+          <div class="tags">
+            <span>Flask</span>
+            <span>PostgreSQL</span>
+            <span>Heroku</span>
+          </div>
+        </div>
+
+        <div class="project-card">
           <h3>Face Mask Detection</h3>
-          <p>TensorFlow-based model that identifies real-time mask usage.</p>
+          <p><strong>Organization: Academic</strong></p>
+          <p>A computer vision-based CNN model that detects whether a person is wearing a mask in real time via webcam.
+          </p>
+          <ul>
+            <li>Trained CNN with labeled face mask dataset using TensorFlow.</li>
+            <li>Integrated OpenCV for real-time video stream processing.</li>
+            <li>Achieved high detection accuracy through model optimization.</li>
+          </ul>
           <div class="tags">
             <span>TensorFlow</span>
+            <span>OpenCV</span>
             <span>Deep Learning</span>
           </div>
         </div>
 
         <div class="project-card">
           <h3>Sentiment Analysis</h3>
-          <p>Used NLP to interpret customer reviews and improve products.</p>
+          <p><strong>Organization: Academic</strong></p>
+          <p>An NLP pipeline for classifying customer reviews from e-commerce platforms into positive, neutral, and
+            negative sentiments.</p>
+          <ul>
+            <li>Used NLTK and Scikit-learn for text preprocessing and classification.</li>
+            <li>Visualized sentiment distribution using matplotlib.</li>
+            <li>Applied TF-IDF vectorization and trained logistic regression model.</li>
+          </ul>
           <div class="tags">
             <span>NLP</span>
             <span>Python</span>
+            <span>Scikit-learn</span>
           </div>
         </div>
+
+        <div class="project-card">
+          <h3>Sign Language Converter</h3>
+          <p><strong>Organization: Academic</strong></p>
+          <p>A computer vision system using CNNs to recognize hand gestures of ASL and convert them into audio and text
+            output.</p>
+          <ul>
+            <li>Captured and labeled ASL gestures dataset using webcam.</li>
+            <li>Built and trained a deep CNN model to classify hand signs.</li>
+            <li>Used pyttsx3 for text-to-speech output.</li>
+          </ul>
+          <div class="tags">
+            <span>CNN</span>
+            <span>OpenCV</span>
+            <span>pyttsx3</span>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <h3>Recruiter Dashboard</h3>
+          <p><strong>Organization: Self-Project</strong></p>
+          <p>A full-stack web application for recruiters to create, manage, and filter job/internship postings with
+            customized requirements.</p>
+          <ul>
+            <li>Designed and implemented a multi-step job/internship posting wizard.</li>
+            <li>Developed a centralized dashboard to manage all postings efficiently.</li>
+            <li>Created advanced filtering options for skills, tech stack, and qualifications.</li>
+            <li>Built an intuitive ReactJS frontend with RESTful backend APIs.</li>
+          </ul>
+          <div class="tags">
+            <span>ReactJS</span>
+            <span>RESTful API</span>
+            <span>Full Stack</span>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -171,16 +361,22 @@
     </section>
 
     <!-- Certifications Section -->
-    <section id="certifications" class="certifications-section">
-      <h2>Certifications</h2>
+    <section id="certifications" class="section certifications-section">
+      <h2>Certifications & Publications</h2>
       <p>Courses and achievements that shaped my skills</p>
 
       <div class="certification-grid">
         <div class="certification-card">
-          Microsoft Certified: AI Fundamentals
+          <h3>TensorFlow Developer Certificate</h3>
+          <span class="date">Aug 2023</span>
         </div>
         <div class="certification-card">
-          TensorFlow
+          <h3>Microsoft Certified: AI Fundamentals</h3>
+          <span class="date">Nov 2022</span>
+        </div>
+        <div class="certification-card">
+          <h3>International journal for research in applied science & engineering technology</h3>
+          <span class="date">Mar 2024</span>
         </div>
       </div>
     </section>
@@ -198,4 +394,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
